Added appendix to report, fixed last error in pcb layout (missing junction)

--- a/report/references.tex
+++ b/report/references.tex
@@ -4,6 +4,9 @@
 
 \bibitem{stm32cubemx}
   \url{http://www.st.com/en/development-tools/stm32cubemx.html}
+\bibitem{kicad}
+	KiCad open source electronics design,
+  \url{kicad-pcb.org/}
 \bibitem{x-cube-ble1}
   \url{http://www.st.com/en/embedded-software/x-cube-ble1.html}
 \bibitem{x-cube-mems1}
