--- a/report/APPENDIX.tex
+++ b/report/APPENDIX.tex
@@ -1,11 +1,17 @@
 \section{APPENDIX}
 \label{sec:app}
-\addcontentsline{toc}{section}{\nameref{sec:app}}
 
 \begin{figure*}[htb]
 	\centering
-    %\includegraphics[width=.75\linewidth]{Images/casing.png}
-    %\caption{System enclosure}
-	
-    \label{fig:casing}
+    \includegraphics[width=\linewidth]{Figures/casing_dimensions.png}
+	\caption{System enclosure shape and dimensions}
+	\label{fig:casdim}
 \end{figure*}
+
+%INSERT Image of circuit board
+
+%INSERT Image of Battery circuit
+
+%INSERT Image of casing
+
+%INSERT Image of complete/mounted system
