--- a/report/introduction.tex
+++ b/report/introduction.tex
@@ -13,11 +13,10 @@ The art of sailing has been around for millenia. For much of human history it ha
 \subsection{Goals}
 The primary functional goals are as follows:
 
-% - TODO Create reference to abbreviation table for GPS, IMU?
 \begin{itemize}
 	\item[.] Boat attitude
 	\begin{itemize}
-		\item[-] Implementing an appropriate sensor array:
+		\item[-] Implementing an appropriate \gls{imu}:
 		\begin{itemize}
 			\item Accelerometer
 			\item Gyroscope
@@ -27,8 +26,8 @@ The primary functional goals are as follows:
 	\end{itemize}
 	\item[.] Position tracking and velocity
 	\begin{itemize}
-		\item[-] Implementing a GPS system
-		\item[-] Fusing the GPS output with the accelerometer output for more accurate positioning and velocity
+		\item[-] Implementing a \gls{gps} system
+		\item[-] Fusing the \gls{gps} output with the accelerometer output for more accurate positioning and velocity
 	\end{itemize}
 	\item[.] Design a force measurement circuit for the centerboard
 	\begin{itemize}
