--- a/report/main.tex
+++ b/report/main.tex
@@ -1,6 +1,6 @@
 \documentclass[a4paper]{article}
 
-%text
+% text
 \usepackage[utf8]{inputenc}
 \usepackage[numbers,super]{natbib}
 \usepackage{lipsum}
@@ -16,21 +16,25 @@
 \usepackage{subfig}
 \usepackage{float}
 
-
-
 % links
 \usepackage{color}
-\usepackage[linktocpage=true, colorlinks=true, allcolors=blue]{hyperref}
+%\usepackage[linktocpage=true, colorlinks=true, allcolors=blue]{hyperref}
+\usepackage[pdfpagemode={UseOutlines},bookmarks=true,bookmarksopenlevel=0,bookmarksnumbered=true,plainpages=false,colorlinks,linkcolor={black},citecolor={blue},urlcolor={red},pdfstartview={FitV},unicode,breaklinks=true,pdfpagelabels]{hyperref}
 \usepackage[all]{hypcap}
 \usepackage[hypcap]{caption}
 
-%layout
+% layout
 \usepackage{multicol}
 \usepackage{fancyhdr,lastpage}
 \setcounter{tocdepth}{2}
 
-%header layout
+% header layout
 \usepackage{suffix}
+
+% abbreviations glossary
+\usepackage[acronym]{glossaries}
+\makeglossaries
+
 \newcommand{\project}{\emph {SailorAid}}
 
 \newcommand\chapterauthor[1]{\authortoc{#1}\printchapterauthor{#1}}
@@ -52,13 +56,10 @@
 }
 \makeatother
 
-
-
-%header style
+% header style
 \pagestyle{fancy}
 \lhead{Project \project}
 \chead{}
-
 
 \rhead{\today}
 \lfoot{}
@@ -66,6 +67,8 @@
 \rfoot{}
 \renewcommand{\headrulewidth}{0.4pt}
 \renewcommand{\footrulewidth}{0.4pt}
+
+\input{glossary.tex}
 
 \begin{document}
 
@@ -80,13 +83,15 @@
 
 \clearpage
 \setlength{\columnseprule}{0.2pt}
-
 \tableofcontents
-
 \vspace{0.5em}
 
 \clearpage
+\noindent
+\printglossary[type=\acronymtype]
+\printglossary[type=main]
 
+\clearpage
 \setcounter{page}{2}
 \section{Introduction}
 \chapterauthor{who??? (no one)}
