Remove extra dots in glossary

--- a/report/glossary.tex
+++ b/report/glossary.tex
@@ -23,7 +23,7 @@ first={Inertial Measurement Unit (IMU)\glsadd{imug}}, see=[Glossary:]{imug}}
 \newglossaryentry{gpsg}{name={GPS},
     description={The Global Positioning System (GPS) is a radionavigation
     system owned by the United States government and operated by the 
-    United States Air Force. It uses sattelites for geolocation and time.}}
+    United States Air Force. It uses sattelites for geolocation and time}}
 \newglossaryentry{gps}{type=\acronymtype, name={GPS}, 
 description={Global Positioning System}, 
 first={Global Positioning System (GPS)\glsadd{gpsg}}, see=[Glossary:]{gpsg}}
@@ -31,7 +31,7 @@ first={Global Positioning System (GPS)\glsadd{gpsg}}, see=[Glossary:]{gpsg}}
 %%% CAD
 \newglossaryentry{cadg}{name={CAD},
     description={Computer-aided design (CAD) is a computer system which aids
-    the creation and modification of some kind of design.}}
+    the creation and modification of some kind of design}}
 \newglossaryentry{cad}{type=\acronymtype, name={CAD}, 
 description={Computer-aided design}, 
 first={Computer-aided design (CAD)\glsadd{cadg}}, see=[Glossary:]{cadg}}
@@ -77,7 +77,7 @@ first={ARM architecture (ARM)\glsadd{armg}}, see=[Glossary:]{armg}}
 %%% ST
 \newglossaryentry{stg}{name={ST},
     description={STMicroelectronics (ST) is a French-Italian multinational 
-    electronics and semiconductor manufacturer.}}
+    electronics and semiconductor manufacturer}}
 \newglossaryentry{st}{type=\acronymtype, name={ST}, 
 description={STMicroelectronics}, 
 first={STMicroelectronics (ST)\glsadd{stg}}, see=[Glossary:]{stg}}
@@ -164,7 +164,7 @@ first={Analog-to-digital converter (ADC)\glsadd{adcg}}, see=[Glossary:]{adcg}}
 %%% NMEA
 \newglossaryentry{nmeag}{name={NMEA},
     description={The National Marine Electronics Association (NMEA) standard is a
-    specification that defines the interface between various pieces of marine electronic equipment.}}
+    specification that defines the interface between various pieces of marine electronic equipment}}
 \newglossaryentry{nmea}{type=\acronymtype, name={NMEA}, 
 description={National Marine Electronics Association standard}, 
 first={National Marine Electronics Association standard (NMEA)\glsadd{nmeag}}, see=[Glossary:]{nmeag}}
