Some HW report done..

--- a/report/APPENDIX.tex
+++ b/report/APPENDIX.tex
@@ -3,7 +3,7 @@
 
 \begin{figure*}[htb]
 	\centering
-    \includegraphics[width=\linewidth]{Figures/casing_dimensions.png}
+    \includegraphics[width=.75\linewidth]{Figures/casing_dimensions.png}
 	\caption{System enclosure shape and dimensions}
 	\label{fig:casdim}
 \end{figure*}
