--- a/report/references.tex
+++ b/report/references.tex
@@ -2,11 +2,16 @@
 \label{sec:ref}
 \addcontentsline{toc}{section}{\nameref{sec:ref}}
 
+% Reference to casing cad software missing
+% Reference to software used to develop battery circuit missing
+
 \bibitem{stm32cubemx}
   \url{http://www.st.com/en/development-tools/stm32cubemx.html}
 \bibitem{kicad}
 	KiCad open source electronics design,
   \url{kicad-pcb.org/}
+\bibitem{cad}
+	MISSING reference to cad software used to develop casing
 \bibitem{x-cube-ble1}
   \url{http://www.st.com/en/embedded-software/x-cube-ble1.html}
 \bibitem{x-cube-mems1}
