--- a/report/main.tex
+++ b/report/main.tex
@@ -106,6 +106,7 @@
 \label{sec:application}
 \input{application.tex}
 
+\clearpage
 \section{Hardware Design}\label{sec:hwdesign}
 \chapterauthor{Brolin, Daniel (one, no)}
 \input{hw_design.tex}
